<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:background="@color/white">


    <TextView
            android:layout_marginTop="@dimen/margin_medium_1"
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/add_note"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/text_medium_4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <ImageView
            android:layout_marginTop="@dimen/margin_medium_1"
            android:layout_marginEnd="@dimen/margin_medium_1"
            android:id="@+id/ivSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/ivBackPress"
            android:layout_alignParentRight="true"
            android:src="@drawable/ic_note_save_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <ImageView
            android:layout_marginTop="@dimen/margin_medium_1"
            android:layout_marginStart="@dimen/margin_medium_1"
            android:id="@+id/ivBackPress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_baseline_arrow_back_accent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputEtTitle"
            style="@style/TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/grey"
            android:layout_marginTop="@dimen/margin_medium_2"
            android:layout_marginStart="@dimen/margin_medium_1"
            android:layout_marginEnd="@dimen/margin_medium_1"
            app:boxStrokeColor="@color/colorAccent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivBackPress">

        <EditText
                android:id="@+id/etTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/note_title"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/text_medium_3" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputEtbrief"
            style="@style/TextInputLayout"
            android:layout_width="match_parent"
            android:layout_margin="@dimen/margin_medium_1"
            android:layout_height="0dp"
            android:layout_below="@+id/inputEtTitle"
            android:textColorHint="@color/grey"
            app:boxStrokeColor="@color/colorAccent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/inputEtTitle">

        <EditText
                android:id="@+id/etBrief"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="start"
                android:hint="@string/et_brief"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/text_medium_3" />
    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>