<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:weightSum="2"
        android:background="@color/white"
        android:layout_height="match_parent">


    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/colorAccent">

        <ImageView

                android:id="@id/ivBackPress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_medium_1"
                android:layout_marginTop="@dimen/margin_medium_1"
                android:src="@drawable/ic_baseline_arrow_back_white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


        <com.google.android.material.card.MaterialCardView
                android:id="@+id/cvDevProfile"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginBottom="@dimen/margin_medium_2"
                app:cardCornerRadius="50pt"
                app:cardElevation="4dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ivBackPress"
                app:layout_constraintVertical_bias="0.488"
                app:strokeColor="@color/white"
                app:strokeWidth="2dp">

            <ImageView
                    android:id="@+id/ivProfile"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/profile" />
        </com.google.android.material.card.MaterialCardView>

        <TextView
                android:id="@+id/tvName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_name"
                android:textColor="@color/white"
                android:textSize="@dimen/text_large_1"
                android:layout_marginBottom="@dimen/margin_medium_1"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cvDevProfile"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

        <ImageView
                android:id="@+id/ivEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30pt"
                android:layout_marginTop="@dimen/margin_large"
                android:src="@drawable/ic_profile_email_28dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        <TextView
                android:id="@+id/tvMail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_large"
                android:layout_marginTop="@dimen/margin_large"
                android:layout_toRightOf="@id/ivEmail"
                android:text="@string/email"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/text_medium_5"
                app:layout_constraintStart_toEndOf="@+id/ivEmail"
                app:layout_constraintTop_toTopOf="parent" />


        <ImageView
                android:layout_marginStart="30pt"
                android:layout_marginTop="@dimen/margin_large"
                android:id="@+id/ivPhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_profile_phone_28dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ivEmail" />

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_large"
                android:layout_marginStart="@dimen/margin_large"
                android:layout_toRightOf="@id/ivPhone"
                android:text="@string/phone"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/text_medium_5"
                app:layout_constraintStart_toEndOf="@+id/ivPhone"
                app:layout_constraintTop_toBottomOf="@+id/ivEmail"/>


        <com.google.android.material.card.MaterialCardView
                android:id="@+id/btnLogout"
                android:layout_marginTop="@dimen/margin_large"
                android:layout_width="150dp"
                android:layout_height="40dp"
                android:background="@color/colorAccent"
                app:cardBackgroundColor="@color/colorAccent"
                app:cardCornerRadius="30pt"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ivPhone">

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/Log_Out"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_medium_4" />


        </com.google.android.material.card.MaterialCardView>


    </androidx.constraintlayout.widget.ConstraintLayout>



</LinearLayout>
















